--- a/public/main.css
+++ b/public/main.css
@@ -513,6 +513,30 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.fixed {
+  position: fixed;
+}
+
+.relative {
+  position: relative;
+}
+
+.bottom-0 {
+  bottom: 0px;
+}
+
+.left-0 {
+  left: 0px;
+}
+
+.top-0 {
+  top: 0px;
+}
+
+.z-10 {
+  z-index: 10;
+}
+
 .row-span-1 {
   grid-row: span 1 / span 1;
 }
@@ -571,6 +595,10 @@ video {
   margin-top: 0.5rem;
 }
 
+.mt-4 {
+  margin-top: 1rem;
+}
+
 .mt-6 {
   margin-top: 1.5rem;
 }
@@ -587,8 +615,16 @@ video {
   display: grid;
 }
 
+.h-2 {
+  height: 0.5rem;
+}
+
 .h-5 {
   height: 1.25rem;
+}
+
+.h-\[200px\] {
+  height: 200px;
 }
 
 .h-\[30rem\] {
@@ -607,12 +643,20 @@ video {
   height: 100vh;
 }
 
+.w-2 {
+  width: 0.5rem;
+}
+
 .w-\[30rem\] {
   width: 30rem;
 }
 
 .w-\[90vw\] {
   width: 90vw;
+}
+
+.w-auto {
+  width: auto;
 }
 
 .w-full {
@@ -670,8 +714,21 @@ video {
   row-gap: 1rem;
 }
 
+.gap-y-8 {
+  row-gap: 2rem;
+}
+
+.place-self-center {
+  place-self: center;
+}
+
 .rounded-2xl {
   border-radius: 1rem;
+}
+
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
 .bg-blue-200 {
@@ -687,6 +744,15 @@ video {
 .bg-blue-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(96 165 250 / var(--tw-bg-opacity));
+}
+
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-opacity-30 {
+  --tw-bg-opacity: 0.3;
 }
 
 .bg-opacity-80 {
@@ -923,12 +989,6 @@ video {
 }
 
 @media (min-width: 768px) {
-  @media not all and (min-width: 1280px) {
-    .md\:max-xl\:grid-cols-2 {
-      grid-template-columns: repeat(2, minmax(0, 1fr));
-    }
-  }
-
   @media not all and (min-width: 1024px) {
     .md\:max-lg\:text-lg {
       font-size: 1.125rem;
@@ -946,10 +1006,28 @@ video {
       line-height: 1.75rem;
     }
   }
+}
 
-  @media not all and (min-width: 640px) {
-    .md\:max-sm\:h-\[200px\] {
-      height: 200px;
-    }
+@media (min-width: 1024px) {
+  .lg\:mx-12 {
+    margin-left: 3rem;
+    margin-right: 3rem;
+  }
+
+  .lg\:h-screen {
+    height: 100vh;
+  }
+
+  .lg\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .lg\:grid-rows-none {
+    grid-template-rows: none;
+  }
+
+  .lg\:gap-x-6 {
+    -moz-column-gap: 1.5rem;
+         column-gap: 1.5rem;
   }
 }
