--- a/public/main.css
+++ b/public/main.css
@@ -517,6 +517,10 @@ video {
   position: fixed;
 }
 
+.absolute {
+  position: absolute;
+}
+
 .relative {
   position: relative;
 }
@@ -529,8 +533,20 @@ video {
   left: 0px;
 }
 
+.right-\[-90\%\] {
+  right: -90%;
+}
+
 .top-0 {
   top: 0px;
+}
+
+.top-\[3\%\] {
+  top: 3%;
+}
+
+.left-1\/2 {
+  left: 50%;
 }
 
 .z-10 {
@@ -543,6 +559,38 @@ video {
 
 .row-span-2 {
   grid-row: span 2 / span 2;
+}
+
+.m-4 {
+  margin: 1rem;
+}
+
+.m-6 {
+  margin: 1.5rem;
+}
+
+.m-8 {
+  margin: 2rem;
+}
+
+.m-\[30px\] {
+  margin: 30px;
+}
+
+.m-\[280px\] {
+  margin: 280px;
+}
+
+.m-\[28px\] {
+  margin: 28px;
+}
+
+.m-\[50px\] {
+  margin: 50px;
+}
+
+.m-\[60px\] {
+  margin: 60px;
 }
 
 .mx-12 {
@@ -573,6 +621,15 @@ video {
 .my-4 {
   margin-top: 1rem;
   margin-bottom: 1rem;
+}
+
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.mb-6 {
+  margin-bottom: 1.5rem;
 }
 
 .ml-3 {
@@ -615,12 +672,16 @@ video {
   display: grid;
 }
 
-.h-2 {
-  height: 0.5rem;
-}
-
 .h-5 {
   height: 1.25rem;
+}
+
+.h-6 {
+  height: 1.5rem;
+}
+
+.h-8 {
+  height: 2rem;
 }
 
 .h-\[200px\] {
@@ -643,8 +704,16 @@ video {
   height: 100vh;
 }
 
-.w-2 {
-  width: 0.5rem;
+.w-20 {
+  width: 5rem;
+}
+
+.w-8 {
+  width: 2rem;
+}
+
+.w-\[260px\] {
+  width: 260px;
 }
 
 .w-\[30rem\] {
@@ -667,6 +736,21 @@ video {
   width: 100vw;
 }
 
+.translate-y-full {
+  --tw-translate-y: 100%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-x-1\/2 {
+  --tw-translate-x: 50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-x-1\/3 {
+  --tw-translate-x: 33.333333%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
@@ -679,8 +763,16 @@ video {
   grid-template-rows: repeat(5, minmax(0, 1fr));
 }
 
+.flex-row {
+  flex-direction: row;
+}
+
 .flex-col {
   flex-direction: column;
+}
+
+.items-end {
+  align-items: flex-end;
 }
 
 .items-center {
@@ -726,6 +818,20 @@ video {
   border-radius: 1rem;
 }
 
+.rounded {
+  border-radius: 0.25rem;
+}
+
+.rounded-l-md {
+  border-top-left-radius: 0.375rem;
+  border-bottom-left-radius: 0.375rem;
+}
+
+.rounded-r-md {
+  border-top-right-radius: 0.375rem;
+  border-bottom-right-radius: 0.375rem;
+}
+
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
@@ -746,9 +852,9 @@ video {
   background-color: rgb(96 165 250 / var(--tw-bg-opacity));
 }
 
-.bg-white {
+.bg-gray-800 {
   --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-30 {
@@ -765,6 +871,12 @@ video {
 
 .bg-gradient-to-tl {
   background-image: linear-gradient(to top left, var(--tw-gradient-stops));
+}
+
+.from-blue-300 {
+  --tw-gradient-from: #93c5fd;
+  --tw-gradient-to: rgb(147 197 253 / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
 .from-blue-700 {
@@ -789,12 +901,47 @@ video {
   --tw-gradient-stops: var(--tw-gradient-from), #0369a1, var(--tw-gradient-to);
 }
 
+.via-emerald-200 {
+  --tw-gradient-to: rgb(167 243 208 / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), #a7f3d0, var(--tw-gradient-to);
+}
+
+.via-sky-300 {
+  --tw-gradient-to: rgb(125 211 252 / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), #7dd3fc, var(--tw-gradient-to);
+}
+
 .to-blue-500 {
   --tw-gradient-to: #3b82f6;
 }
 
+.to-blue-600 {
+  --tw-gradient-to: #2563eb;
+}
+
+.to-cyan-300 {
+  --tw-gradient-to: #67e8f9;
+}
+
 .p-4 {
   padding: 1rem;
+}
+
+.px-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+}
+
+.pl-2 {
+  padding-left: 0.5rem;
+}
+
+.pl-4 {
+  padding-left: 1rem;
+}
+
+.pt-4 {
+  padding-top: 1rem;
 }
 
 .text-center {
@@ -830,6 +977,11 @@ video {
   line-height: 1.25rem;
 }
 
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -847,6 +999,11 @@ video {
   color: rgb(37 99 235 / var(--tw-text-opacity));
 }
 
+.text-blue-700 {
+  --tw-text-opacity: 1;
+  color: rgb(29 78 216 / var(--tw-text-opacity));
+}
+
 .text-neutral-100 {
   --tw-text-opacity: 1;
   color: rgb(245 245 245 / var(--tw-text-opacity));
@@ -855,6 +1012,16 @@ video {
 .text-neutral-50 {
   --tw-text-opacity: 1;
   color: rgb(250 250 250 / var(--tw-text-opacity));
+}
+
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-gray-100 {
+  --tw-text-opacity: 1;
+  color: rgb(243 244 246 / var(--tw-text-opacity));
 }
 
 .underline {
@@ -867,6 +1034,10 @@ video {
 
 .decoration-1 {
   text-decoration-thickness: 1px;
+}
+
+.opacity-0 {
+  opacity: 0;
 }
 
 .shadow-md {
@@ -888,6 +1059,12 @@ video {
 .shadow-blue-800 {
   --tw-shadow-color: #1e40af;
   --tw-shadow: var(--tw-shadow-colored);
+}
+
+.transition-opacity {
+  transition-property: opacity;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
 }
 
 .text-area {
@@ -964,6 +1141,42 @@ video {
   --tw-shadow: var(--tw-shadow-colored);
 }
 
+.href-button:active {
+  --tw-brightness: brightness(1.25);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.hover\:cursor-pointer:hover {
+  cursor: pointer;
+}
+
+.hover\:opacity-80:hover {
+  opacity: 0.8;
+}
+
+.hover\:opacity-90:hover {
+  opacity: 0.9;
+}
+
+.hover\:brightness-110:hover {
+  --tw-brightness: brightness(1.1);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.active\:brightness-125:active {
+  --tw-brightness: brightness(1.25);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.active\:brightness-75:active {
+  --tw-brightness: brightness(.75);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.group:hover .group-hover\:opacity-100 {
+  opacity: 1;
+}
+
 @media (max-width: 650px) {
   .max-\[650px\]\:mt-6 {
     margin-top: 1.5rem;
@@ -988,7 +1201,21 @@ video {
   }
 }
 
+@media (min-width: 598px) {
+  .min-\[598px\]\:m-\[48px\] {
+    margin: 48px;
+  }
+
+  .min-\[598px\]\:m-\[28px\] {
+    margin: 28px;
+  }
+}
+
 @media (min-width: 768px) {
+  .md\:right-\[-94\%\] {
+    right: -94%;
+  }
+
   @media not all and (min-width: 1024px) {
     .md\:max-lg\:text-lg {
       font-size: 1.125rem;
@@ -1009,6 +1236,26 @@ video {
 }
 
 @media (min-width: 1024px) {
+  .lg\:right-\[-96\%\] {
+    right: -96%;
+  }
+
+  .lg\:m-\[28px\] {
+    margin: 28px;
+  }
+
+  .lg\:m-\[40px\] {
+    margin: 40px;
+  }
+
+  .lg\:m-\[32px\] {
+    margin: 32px;
+  }
+
+  .lg\:m-\[36px\] {
+    margin: 36px;
+  }
+
   .lg\:mx-12 {
     margin-left: 3rem;
     margin-right: 3rem;
@@ -1029,5 +1276,29 @@ video {
   .lg\:gap-x-6 {
     -moz-column-gap: 1.5rem;
          column-gap: 1.5rem;
+  }
+}
+
+@media (min-width: 1214px) {
+  .min-\[1214px\]\:m-\[28px\] {
+    margin: 28px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .xl\:m-\[28px\] {
+    margin: 28px;
+  }
+
+  .xl\:m-\[30px\] {
+    margin: 30px;
+  }
+
+  .xl\:m-\[36px\] {
+    margin: 36px;
+  }
+
+  .xl\:m-\[40px\] {
+    margin: 40px;
   }
 }
