--- a/src/styles.css
+++ b/src/styles.css
@@ -7,5 +7,5 @@
 }
 
 .href-button {
-  @apply bg-blue-800 bg-opacity-60 text-neutral-100 text-base rounded-sm hover:shadow-md hover:shadow-blue-300 transition duration-200 w-full;
+  @apply bg-blue-800 bg-opacity-60 text-neutral-100 text-base rounded-sm hover:shadow-md hover:shadow-blue-300 transition duration-200 w-full active:brightness-125;
 }
