--- a/public/main.css
+++ b/public/main.css
@@ -525,6 +525,10 @@ video {
   position: relative;
 }
 
+.sticky {
+  position: sticky;
+}
+
 .bottom-0 {
   bottom: 0px;
 }
@@ -545,8 +549,8 @@ video {
   top: 3%;
 }
 
-.left-1\/2 {
-  left: 50%;
+.left-2 {
+  left: 0.5rem;
 }
 
 .z-10 {
@@ -559,34 +563,6 @@ video {
 
 .row-span-2 {
   grid-row: span 2 / span 2;
-}
-
-.m-4 {
-  margin: 1rem;
-}
-
-.m-6 {
-  margin: 1.5rem;
-}
-
-.m-8 {
-  margin: 2rem;
-}
-
-.m-\[30px\] {
-  margin: 30px;
-}
-
-.m-\[280px\] {
-  margin: 280px;
-}
-
-.m-\[28px\] {
-  margin: 28px;
-}
-
-.m-\[50px\] {
-  margin: 50px;
 }
 
 .m-\[60px\] {
@@ -618,14 +594,14 @@ video {
   margin-right: 2rem;
 }
 
-.my-4 {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-}
-
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 .mb-6 {
@@ -662,6 +638,10 @@ video {
 
 .mt-8 {
   margin-top: 2rem;
+}
+
+.mt-16 {
+  margin-top: 4rem;
 }
 
 .flex {
@@ -736,18 +716,17 @@ video {
   width: 100vw;
 }
 
-.translate-y-full {
-  --tw-translate-y: 100%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.translate-x-1\/2 {
-  --tw-translate-x: 50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+.w-6 {
+  width: 1.5rem;
 }
 
 .translate-x-1\/3 {
   --tw-translate-x: 33.333333%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-y-full {
+  --tw-translate-y: 100%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -814,12 +793,16 @@ video {
   place-self: center;
 }
 
+.rounded {
+  border-radius: 0.25rem;
+}
+
 .rounded-2xl {
   border-radius: 1rem;
 }
 
-.rounded {
-  border-radius: 0.25rem;
+.rounded-md {
+  border-radius: 0.375rem;
 }
 
 .rounded-l-md {
@@ -896,19 +879,14 @@ video {
   --tw-gradient-stops: var(--tw-gradient-from), #0e7490, var(--tw-gradient-to);
 }
 
-.via-sky-700 {
-  --tw-gradient-to: rgb(3 105 161 / 0);
-  --tw-gradient-stops: var(--tw-gradient-from), #0369a1, var(--tw-gradient-to);
-}
-
-.via-emerald-200 {
-  --tw-gradient-to: rgb(167 243 208 / 0);
-  --tw-gradient-stops: var(--tw-gradient-from), #a7f3d0, var(--tw-gradient-to);
-}
-
 .via-sky-300 {
   --tw-gradient-to: rgb(125 211 252 / 0);
   --tw-gradient-stops: var(--tw-gradient-from), #7dd3fc, var(--tw-gradient-to);
+}
+
+.via-sky-700 {
+  --tw-gradient-to: rgb(3 105 161 / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), #0369a1, var(--tw-gradient-to);
 }
 
 .to-blue-500 {
@@ -1004,6 +982,11 @@ video {
   color: rgb(29 78 216 / var(--tw-text-opacity));
 }
 
+.text-gray-100 {
+  --tw-text-opacity: 1;
+  color: rgb(243 244 246 / var(--tw-text-opacity));
+}
+
 .text-neutral-100 {
   --tw-text-opacity: 1;
   color: rgb(245 245 245 / var(--tw-text-opacity));
@@ -1017,11 +1000,6 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-gray-100 {
-  --tw-text-opacity: 1;
-  color: rgb(243 244 246 / var(--tw-text-opacity));
 }
 
 .underline {
@@ -1046,6 +1024,12 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.shadow {
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .shadow-blue-300 {
   --tw-shadow-color: #93c5fd;
   --tw-shadow: var(--tw-shadow-colored);
@@ -1061,9 +1045,47 @@ video {
   --tw-shadow: var(--tw-shadow-colored);
 }
 
+.shadow-gray-800 {
+  --tw-shadow-color: #1f2937;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.brightness-75 {
+  --tw-brightness: brightness(.75);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.brightness-90 {
+  --tw-brightness: brightness(.9);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.brightness-95 {
+  --tw-brightness: brightness(.95);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.brightness-110 {
+  --tw-brightness: brightness(1.1);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.brightness-125 {
+  --tw-brightness: brightness(1.25);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
 .transition-opacity {
   transition-property: opacity;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.duration-100 {
+  transition-duration: 100ms;
+}
+
+.duration-150 {
   transition-duration: 150ms;
 }
 
@@ -1092,6 +1114,7 @@ video {
   --tw-shadow: var(--tw-shadow-colored);
   outline: 2px solid transparent;
   outline-offset: 2px;
+  transition-duration: 100ms;
 }
 
 .text-area::-moz-placeholder {
@@ -1158,6 +1181,11 @@ video {
   opacity: 0.9;
 }
 
+.hover\:brightness-105:hover {
+  --tw-brightness: brightness(1.05);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
 .hover\:brightness-110:hover {
   --tw-brightness: brightness(1.1);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
@@ -1202,10 +1230,6 @@ video {
 }
 
 @media (min-width: 598px) {
-  .min-\[598px\]\:m-\[48px\] {
-    margin: 48px;
-  }
-
   .min-\[598px\]\:m-\[28px\] {
     margin: 28px;
   }
@@ -1240,18 +1264,6 @@ video {
     right: -96%;
   }
 
-  .lg\:m-\[28px\] {
-    margin: 28px;
-  }
-
-  .lg\:m-\[40px\] {
-    margin: 40px;
-  }
-
-  .lg\:m-\[32px\] {
-    margin: 32px;
-  }
-
   .lg\:m-\[36px\] {
     margin: 36px;
   }
@@ -1282,23 +1294,5 @@ video {
 @media (min-width: 1214px) {
   .min-\[1214px\]\:m-\[28px\] {
     margin: 28px;
-  }
-}
-
-@media (min-width: 1280px) {
-  .xl\:m-\[28px\] {
-    margin: 28px;
-  }
-
-  .xl\:m-\[30px\] {
-    margin: 30px;
-  }
-
-  .xl\:m-\[36px\] {
-    margin: 36px;
-  }
-
-  .xl\:m-\[40px\] {
-    margin: 40px;
   }
 }
