--- a/public/main.css
+++ b/public/main.css
@@ -553,6 +553,10 @@ video {
   z-index: 10;
 }
 
+.z-\[-1\] {
+  z-index: -1;
+}
+
 .row-span-1 {
   grid-row: span 1 / span 1;
 }
@@ -648,6 +652,14 @@ video {
   display: grid;
 }
 
+.hidden {
+  display: none;
+}
+
+.h-0 {
+  height: 0px;
+}
+
 .h-5 {
   height: 1.25rem;
 }
@@ -678,6 +690,14 @@ video {
 
 .h-screen {
   height: 100vh;
+}
+
+.h-\[90\%\] {
+  height: 90%;
+}
+
+.w-0 {
+  width: 0px;
 }
 
 .w-20 {
@@ -783,6 +803,18 @@ video {
 
 .place-self-center {
   place-self: center;
+}
+
+.overflow-hidden {
+  overflow: hidden;
+}
+
+.overflow-clip {
+  overflow: clip;
+}
+
+.overflow-scroll {
+  overflow: scroll;
 }
 
 .rounded {
